src/main/java/pl/scisoftware/sample/bad/seqence/api/MEntity.java
package pl.scisoftware.sample.bad.seqence.api;

/**
 * 
 * MEntity Interfejs encja. Żeby odróżnić obiekty encji od innych obiektów.
 * 
 *
 * @author Sławomir Cichy &lt;slawas@scisoftware.pl&gt;
 * @version $Revision: 1.1 $
 *
 */
public interface MEntity {

}
